changes to repositories' sources so that the url stored is not to the "repo" data, but to the base url changes to the repositories search so that it is possible to qualify on base url documentation updates